[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Player/zombie_idle.png" type="Texture" id=1]
[ext_resource path="res://assets/Player/zombie_walk1.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/zombie_walk2.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/zombie_jump.png" type="Texture" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://assets/Player/hurt.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 25.0
height = 40.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 45.5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 48
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1, 10 )
shape = SubResource( 2 )

[node name="GrabRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="GrabBox" type="CollisionShape2D" parent="GrabRange"]
position = Vector2( 1, 9.5 )
shape = SubResource( 3 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="GrabRange" to="." method="_on_GrabRange_body_entered"]
[connection signal="body_exited" from="GrabRange" to="." method="_on_GrabRange_body_exited"]
